Fix problem with overflowing image

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -32,8 +32,8 @@
         grid-template-columns: 40% 1fr;
         grid-template-rows: 1fr;
 
-        width: 80%;
-        max-width: 1200px;
+        width: 90%;
+        max-width: 1100px;
         height: 400px;
         margin: calc((100vh - 400px) /2) auto;
         overflow: visible;
